--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  connectivity_plus: ^6.0.3
   flutter:
     sdk: flutter
+  http: ^1.2.0
+  info_popup: ^4.3.1
 
 dev_dependencies:
   flutter_test:
